--- a/package.json
+++ b/package.json
@@ -37,5 +37,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://dlagmltjd17.github.io/maruon_web"
+  "homepage": "https://maruon-web.vercel.app/maruon_web"
 }
